[metadata]
name = CS410_FlyEM_kshvr16
version = 0.0.1
author = Sai Harshavardhan Reddy Kona
author_email = kshvr1699@gmail.com
description = A package based on traditional segmentation algorithms used to segment a fly retina images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kshvr16/CS410_FlyEM_PyPI
project_urls =
    Bug Tracker = https://github.com/kshvr16/CS410_FlyEM_PyPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy, mahotas, matplotlib, scikit-image
